link added on company logo

--- a/popup.html
+++ b/popup.html
@@ -32,11 +32,18 @@
         </a>
         <div class="powered-by">
           <span>Powered by</span>
-          <img
-            src="images/flexsoftrLogo.webp"
-            alt="FLEX SOFTR"
-            class="flexsoftr-logo"
-          />
+
+          <a
+            href="https://fake-order-checker.flexsoftr.com/"
+            target="_blank"
+            class="logo-link"
+          >
+            <img
+              src="images/flexsoftrLogo.webp"
+              alt="FLEX SOFTR"
+              class="flexsoftr-logo"
+            />
+          </a>
         </div>
       </div>
 
